binread/tests/errors/conflicting_keyword_bool.stderr
error: conflicting `restore_position` keyword
 --> $DIR/conflicting_keyword_bool.rs:5:28
  |
5 |     #[br(restore_position, restore_position)]
  |                            ^^^^^^^^^^^^^^^^
